--- a/MedicamentosBD/src/Confirmacion/JFConfirmaPaciente.form
+++ b/MedicamentosBD/src/Confirmacion/JFConfirmaPaciente.form
@@ -6,7 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -56,13 +56,15 @@
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="255" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" attributes="0">
                                   <Component id="lblEstatura" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="EstaturaConfirma" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="EstaturaConfirma" min="-2" pref="96" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                                  <Component id="lblmts" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                               </Group>
                               <Component id="RegresarBtn" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -86,7 +88,9 @@
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="lblPeso" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="PesoConfirma" min="-2" pref="96" max="-2" attributes="0"/>
+                                          <Component id="PesoConfirma" min="-2" pref="70" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="lblPeso1" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="lblIngreso" min="-2" max="-2" attributes="0"/>
@@ -126,9 +130,15 @@
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="lblPeso" min="-2" max="-2" attributes="0"/>
-                      <Component id="EstaturaConfirma" alignment="0" min="-2" pref="20" max="-2" attributes="0"/>
-                      <Component id="PesoConfirma" min="-2" pref="20" max="-2" attributes="0"/>
-                      <Component id="lblEstatura" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                          <Component id="EstaturaConfirma" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                          <Component id="lblmts" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblEstatura" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="PesoConfirma" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                          <Component id="lblPeso1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -248,6 +258,22 @@
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="labelIng"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lblPeso1">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="kg"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lblmts">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="mts"/>
           </Properties>
         </Component>
       </SubComponents>
