--- a/MedicamentosBD/src/Confirmacion/JFConfirmaPrescripcion.form
+++ b/MedicamentosBD/src/Confirmacion/JFConfirmaPrescripcion.form
@@ -62,10 +62,10 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="355" max="32767" attributes="0"/>
+                  <EmptySpace pref="362" max="32767" attributes="0"/>
                   <Component id="Button_Enviar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="ConfirmaBtn" min="-2" max="-2" attributes="0"/>
+                  <Component id="CancelarButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
@@ -158,7 +158,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="ConfirmaBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="CancelarButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="Button_Enviar" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -199,10 +199,13 @@
             <Property name="text" type="java.lang.String" value="Instrucciones: "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="ConfirmaBtn">
+        <Component class="javax.swing.JButton" name="CancelarButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Confirmar"/>
+            <Property name="text" type="java.lang.String" value="Cancelar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CancelarButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="Button_Enviar">
           <Properties>
