--- a/MedicamentosBD/src/Vistas/Inserts/JFPersonal.form
+++ b/MedicamentosBD/src/Vistas/Inserts/JFPersonal.form
@@ -191,6 +191,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Cancelar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button_CancelarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="per_admin">
           <Properties>
